Started notation table after prelims. Added showkeys to preamble. Changed notation for \ball -- Now makes q explicit, because we use it with different primes. To simplify , \ball is now a command with 2 arguments.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -58,7 +58,7 @@
 \newcommand{\binsca}{\mathsf{bin}}
 \newcommand{\proj}{\mathsf{proj}}
 \newcommand{\lbl}{\mathsf{label}}
-\newcommand{\ball}{\mathcal{B}}
+\newcommand{\ball}[2]{\mathcal{B}_{#1, #2}}
 \newcommand{\sis}{\mathsf{SIS}}
 \newcommand{\tern}{\mathcal{T}}
 
