--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{mdframed}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage[notref,notcite]{showkeys} % comment out for final version or add ``final'' as option to the documentclass
 \usepackage[colorlinks=true,citecolor=NavyBlue,linkcolor=Black,backref]{hyperref}
 %\input{backrefpatch}
 \usepackage{nicefrac}
