--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -2,7 +2,7 @@
 
 
 \gnote{Make this a section instead of a subsection?}
-To reduce the size needed to transmit openings in our HVC construction, we employ a non-trivial encoding scheme.
+To reduce the size needed to transmit openings in our final HVC construction, we employ a non-trivial encoding scheme.
 Let us first sketch the idea, before defining it more formally.
 
 Our HVC construction is, except for projections and decompositions, a Merkle tree with a homomorphic hash function.
