--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -702,7 +702,7 @@ We will prove this lemma by leveraging that any pair of valid decommitments for 
     &\Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\} \land \projmod{q}(\vec{p}_\tau^0) = \projmod{q}(\vec{p}_\tau^1)]\\
     \leq{}&\Pr[\projmod{q'}(\vec{u}^0) \neq \projmod{q'}(\vec{u}^1) \land \vec{g}^\transpose\cdot \vec{u}^0 = \vec{g}^\transpose\cdot \vec{u}^1 \land \norm{\vec{u}^0}\leq 2\bagg \land \norm{\vec{u}^1}\leq 2\bagg]\tag{Def.\ of $\wverify$}\\
     \leq{}& \Pr[\vec{u}^0 \neq \vec{u}^1 \land \vec{g}^\transpose\cdot (\vec{u}^0-\vec{u}^1) = 0 \land \norm{\vec{u}^0-\vec{u}^1}\leq 4\bagg]\\
-    = {}& \Pr[(\vec{u}^0-\vec{u}^1) \in \ball_{4\bagg}^{\xi\ceil{\log_{2\eta+1}q'}}\setminus \{\vec{0}\} \land \vec{g}^\transpose\cdot (\vec{u}^0-\vec{u}^1) = 0]\\
+    = {}& \Pr[(\vec{u}^0-\vec{u}^1) \in \ball{4\bagg}{q}^{\xi\ceil{\log_{2\eta+1}q'}}\setminus \{\vec{0}\} \land \vec{g}^\transpose\cdot (\vec{u}^0-\vec{u}^1) = 0]\\
     \leq{}& \negl\enspace,
   \end{align*}
   where the last inequality follows from the assumed hardness of the $\sis_{\ring,q,\xi\ceil{\log_{2\eta+1} q'},4\bagg}$ problem and the fact that all involved algorithms are PPT.
@@ -760,7 +760,7 @@ We will prove this lemma by leveraging that any pair of valid decommitments for 
   Thus, whenever $\adv$ is successful, $\sisadv$ is successful with probability $1$ and we can conclude that
   \begin{align*}
   \negl \geq{}& \Pr[
-      \vec{a} \gets \ring_q^{2\lceil\log_{2\eta+1} q\rceil}; \vec{z}\gets\sisadv(\vec{a}) : \vec{z}\in\ball_{4\bagg}^{2\lceil\log q\rceil}\setminus\{\vec{0}\} \land \vec{a}^\transpose\vec{z}\equiv 0
+      \vec{a} \gets \ring_q^{2\lceil\log_{2\eta+1} q\rceil}; \vec{z}\gets\sisadv(\vec{a}) : \vec{z}\in\ball{4\bagg}{q}^{2\lceil\log q\rceil}\setminus\{\vec{0}\} \land \vec{a}^\transpose\vec{z}\equiv 0
     ]\\
     ={}&
     \Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\} \land \vec{p}_\tau^0 \bmod q\neq \vec{p}_\tau^1\bmod q]\enspace.
